# multimodal-ppo

./: MultimodalPPOTrainer.py  convert_dataset.py  data_collator.py  dataset.py  main.py  processor.py  pyproject.toml  utils.py
custom/: custom_ppo_config.py  custom_utils.py
tests/: actor_test.py  critic_test.py
