[project]
name = "multimodal-ppo"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "llava",
    "numpy==1.26.1",
    "open-clip-torch>=2.32.0",
    "fastapi>=0.115.14",
    "markdown2[all]>=2.5.3",
    "requests>=2.32.4",
    "sentencepiece~=0.1.99",
    "uvicorn>=0.35.0",
    "wandb>=0.21.0",
    "deepspeed==0.14.4",
    "peft==0.4.0",
    "accelerate==1.7.0",
    "tokenizers==0.21.1",
    "transformers==4.53.0",
    "bitsandbytes==0.46.0",
    "scikit-learn==1.2.2",
    "einops==0.6.1",
    "einops-exts==0.0.4",
    "gradio-client==0.2.9",
    "urllib3<=2.0.0",
    "datasets==3.6.0",
    "pydantic==1.10.8",
    "timm>=1.0.16",
    "hf-transfer>=0.1.9",
    "opencv-python>=4.11.0.86",
    "av==12.1.0",
    "decord>=0.6.0",
    "tyro>=0.9.26",
    "scipy>=1.16.0",
    "qwen-vl-utils>=0.0.11",
    "debugpy>=1.8.14",
    "flash-attn==2.7.4.post1",
    "torch>=2.7.1",
    "torchvision>=0.22.1",
    "trl==0.19.1",
]

[tool.uv.sources]
llava = { git = "https://github.com/LLaVA-VL/LLaVA-NeXT.git" }
